Intento de boton

--- a/Templates/tiendaIndex.html
+++ b/Templates/tiendaIndex.html
@@ -10,6 +10,7 @@
     <div class="rectangulo"> Flor de seis</div>
     <div class="item">
         <p>90$</p>
+            <button class="boton"> Añadir </button>
     </div>
 </body>
 </html>
