--- a/Statics/styles/tiendadiseño.css
+++ b/Statics/styles/tiendadiseño.css
@@ -27,3 +27,9 @@ body{
     font-size: 10px;
     border: 2px solid black;
 }
+.boton{
+    padding: 2px 6px;
+      font-size: 14px;
+      border-radius: 4px;
+      cursor: pointer;
+}
