--- a/Templates/tiendaIndex.html
+++ b/Templates/tiendaIndex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Statics/styles/tiendadiseño.css">
+    <link rel="icon" href="../Statics/img/LogoA.jpg">
     <title>Document</title>
 </head>
 <body>
