--- a/Templates/tiendaIndex.html
+++ b/Templates/tiendaIndex.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Statics/styles/tiendadiseño.css">
     <link rel="icon" href="../Statics/img/LogoA.jpg">
-    <title>Document</title>
+    <title>Flor De Seis</title>
 </head>
 <body>
-
+    <h1>Flor de Seis</h1>
     <div class="productos">
     <div class="producto">
         <p>Amanecer rosado | $300</p>
