--- a/Templates/tiendaIndex.html
+++ b/Templates/tiendaIndex.html
@@ -11,62 +11,88 @@
     <div class="productos">
     <div class="producto">
         <p>Amanecer rosado | $300</p>
+        <img src="../Statics/img/flor1.jpg" class="item-img">
         <button id="b1">Agregar</button>
     </div>
     <div class="producto">
         <p>Destellos de ternura | $150</p>
+        <img src="../Statics/img/flor2.jpg" class="item-img">
         <button id="b2">Agregar</button>
     </div>
     <div class="producto">
         <p>Ramo del recuerdo | $240</p>
+        <img src="../Statics/img/flor3.jpg" class="item-img">
         <button id="b3">Agregar</button>
     </div>
     <div class="producto">
         <p>Caricia de pétalos | $320</p>
+        <img src="../Statics/img/flor4.jpg" class="item-img">
         <button id="b4">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Pétalos de Alba | $220</p>
+        <img src="../Statics/img/flor5.jpg" class="item-img">
         <button id="b5">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Flor de luna | $200</p>
+        <img src="../Statics/img/flor6.jpg" class="item-img">
         <button id="b6">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Corazón silvestre | $300</p>
+        <img src="../Statics/img/flor7.jpg" class="item-img">
         <button id="b7">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Rosa pastel | $620</p>
+        <img src="../Statics/img/flor8.jpg" class="item-img">
         <button id="b8">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Sueño floral | $180</p>
+        <img src="../Statics/img/flor9.jpg" class="item-img">
         <button id="b9">Agregar</button>
     </div>
         <div class="producto">
+            
         <p>Dulce primavera | $300</p>
+        <img src="../Statics/img/flor10.jpg" class="item-img">
         <button id="b10">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Brisa de amor | $700</p>
+        <img src="../Statics/img/flor11.jpg" class="item-img">
         <button id="b11">Agregar</button>
     </div>
         <div class="producto">
+            
         <p>Rosa en eternidad | $400</p>
+        <img src="../Statics/img/flor12.jpg" class="item-img">
         <button id="b12">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Encanto natural | $500</p>
+        <img src="../Statics/img/flor13.jpg" class="item-img">
         <button id="b13">Agregar</button>
     </div>
         <div class="producto">
+            
         <p>Suspiro del rocío | $1000</p>
+        <img src="../Statics/img/flor14.jpg" class="item-img">
         <button id="b14">Agregar</button>
     </div>
     <div class="producto">
+        
         <p>Noche de rosas | $2000</p>
+        <img src="../Statics/img/flor15.jpg" class="item-img">
         <button id="b15">Agregar</button>
     </div>
   </div>
