--- a/Templates/tiendaIndex.html
+++ b/Templates/tiendaIndex.html
@@ -4,29 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Statics/styles/tiendadiseño.css">
-    <link rel="icon" href="../Statics/img/LogoA.jpg">
-    <title>Flor De Seis</title>
+    <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <div class="rectangulo"> Flor de seis</div>
-=======
-    <h1>Flor de Seis</h1>
->>>>>>> 77838f7aba0d59632b6d718cb42353f82a6463f4
+
     <div class="productos">
-<<<<<<< HEAD
     <div class="producto">
         <p>Amanecer rosado | $300</p>
         <img src="../Statics/img/flor1.jpg" class="item-img">
         <button id="b1">Agregar</button>
     </div>
-=======
-        <div class="producto">
-         Amanecer rosado | $300
-         <img style="max-width: 40%; max-height: 40%;" src="../Statics/img/flor1.jpg">
-            <button id="b1">Agregar</button>
-        </div>
->>>>>>> refs/remotes/origin/main
     <div class="producto">
         <p>Destellos de ternura | $150</p>
         <img src="../Statics/img/flor2.jpg" class="item-img">
